main Fix mobile version. Align fomr and change backgournd color.

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,24 @@
-:root {
-    background: #aaa;
-}
-
 .form {
     display: flex;
     justify-content: space-between;
-    gap: 3;
-    width: 400px;
+    align-items: center;
+    width: 40%;
+    height: 40px;
+    margin: 2rem;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
 }
 
 #txtInput {
-    height: 25px;
-    width: 250px;
+    height: 20%;
+    width: 50%;
     border-radius: 3px;
     border: none;
     padding-left: 10px;
+}
+
+#txtInput:focus {
+    outline: none;
 }
 
 #hexInput {
@@ -36,4 +40,12 @@
 .colorList {
     display: flex;
     flex-wrap: wrap;
+}
+
+@media (max-width: 400px) {
+    .form {
+        width: 90%;
+        margin: 0 auto;
+
+    }
 }
